package ejercicio18.Armaduras;

import ejercicio18.Armas.Arma;

public interface Armadura {
    int recibirDanio(Arma a);
}
