package ejercicio18.Armas;

public interface Arma {
    int pelearContraCuero();
    int pelearContraHierro();
    int pelearContraAcero();
}
